# pysatIncubator

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: main.yml
pysat/instruments/: __init__.py
pysatIncubator/: __init__.py
pysatIncubator/instruments/: champ_star.py  demeter_iap.py  superdarn_grdex.py  supermag_magnetometer.py
pysatIncubator/instruments/methods/: __init__.py  demeter.py
pysatIncubator/methods/: __init__.py  empirical.py
pysatIncubator/tests/: test_instruments.py  test_methods_empirical.py
